# Stm32-Template

./: README.md
stm32g/: stm32g431.code-workspace
stm32g/stm32g431/CubeMX/g431cbu6/: .mxproject  g431cbu6.ioc
stm32g/stm32g431/CubeMX/g431cbu6/Core/Src/: main.c
stm32g/stm32g431/g431_fw/: .cproject
stm32g/stm32g431/g431_fw/Debug/: g431_fw.elf  g431_fw.list  g431_fw.map  makefile  objects.list  sources.mk
stm32g/stm32g431/g431_fw/Debug/src/: main.d  subdir.mk
stm32g/stm32g431/g431_fw/Debug/src/ap/: ap.cyclo  ap.d  subdir.mk
stm32g/stm32g431/g431_fw/Debug/src/bsp/: bsp.cyclo  bsp.d  bsp.su  stm32g4xx_hal_msp.d  stm32g4xx_it.d  subdir.mk  system_stm32g4xx.d
stm32g/stm32g431/g431_fw/Debug/src/hw/: hw.d  subdir.mk
stm32g/stm32g431/g431_fw/Debug/src/hw/driver/: led.d  subdir.mk
stm32g/stm32g431/g431_fw/Debug/src/lib/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal.d  stm32g4xx_hal_adc.cyclo  stm32g4xx_hal_adc.d  stm32g4xx_hal_adc.su  stm32g4xx_hal_adc_ex.cyclo  stm32g4xx_hal_adc_ex.d  stm32g4xx_hal_adc_ex.su  stm32g4xx_hal_comp.cyclo  stm32g4xx_hal_comp.d  stm32g4xx_hal_comp.su  stm32g4xx_hal_cordic.d  stm32g4xx_hal_cortex.cyclo  stm32g4xx_hal_cortex.d  stm32g4xx_hal_cortex.su  stm32g4xx_hal_crc.d  stm32g4xx_hal_crc_ex.d  stm32g4xx_hal_cryp.d  stm32g4xx_hal_cryp_ex.d  stm32g4xx_hal_dac.d  stm32g4xx_hal_dac_ex.d  stm32g4xx_hal_dma.d  stm32g4xx_hal_dma_ex.d  stm32g4xx_hal_exti.d  stm32g4xx_hal_fdcan.d  stm32g4xx_hal_flash.d  stm32g4xx_hal_flash_ex.d  stm32g4xx_hal_flash_ramfunc.d  stm32g4xx_hal_fmac.d  stm32g4xx_hal_gpio.d  stm32g4xx_hal_hrtim.d  stm32g4xx_hal_i2c.d  stm32g4xx_hal_i2c_ex.d  stm32g4xx_hal_i2s.d  stm32g4xx_hal_irda.d  stm32g4xx_hal_iwdg.d  stm32g4xx_hal_lptim.d  stm32g4xx_hal_nand.d  stm32g4xx_hal_nor.d  stm32g4xx_hal_opamp.d  stm32g4xx_hal_opamp_ex.d  (+32 more)
stm32g/stm32g431/g431_fw/src/ap/: ap.c
stm32g/stm32g431/g431_fw/src/bsp/: bsp.c  bsp.h
stm32g/stm32g431/g431_fw/src/common/: def.h
stm32g/stm32g431/g431_fw/src/hw/: hw.c  hw.h  hw_def.h
stm32g/stm32g431/g431_fw/src/hw/driver/: led.c
stm32g/stm32g431_fw/: CMakeCache.txt  CMakeLists.txt
stm32g/stm32g431_fw/src/: main.cpp
stm32g/stm32g431_fw/src/ap/: ap.cpp  ap_def.h
stm32g/stm32g431_fw/src/bsp/: bsp.c  bsp.h
stm32g/stm32g431_fw/src/bsp/device/: stm32g4xx_hal_conf.h  stm32g4xx_hal_msp.c  stm32g4xx_it.c
stm32g/stm32g431_fw/src/common/hw/inc/: cli.h  log.h  reset.h  rtc.h
stm32g/stm32g431_fw/src/hw/: hw.c  hw.h  hw_def.h
stm32g/stm32g431_fw/src/hw/driver/: led.c  uart.c  usb.c
stm32g/stm32g431_sample_fw/: CMakeLists.txt
stm32g/stm32g431_sample_fw/src/: main.cpp
stm32g/stm32g431_sample_fw/src/ap/: ap.cpp  ap.h  ap_def.h
stm32g/stm32g431_sample_fw/src/ap/mode/: can_mode.cpp  cli_mode.cpp
stm32g/stm32g431_sample_fw/src/bsp/: bsp.c
stm32g/stm32g431_sample_fw/src/bsp/device/: stm32g4xx_hal_conf.h  stm32g4xx_it.c
stm32g/stm32g431_sample_fw/src/common/core/: qbuffer.c
stm32g/stm32g431_sample_fw/src/common/hw/inc/: i2c.h  rtc.h
stm32g/stm32g431_sample_fw/src/hw/: hw.c  hw.h  hw_def.h
stm32g/stm32g431_sample_fw/src/hw/driver/: can.c  cdc.c  i2c.c  log.c  rtc.c
stm32g/stm32g431_sample_fw/src/hw/driver/usb/: usb.c  usb.h
stm32g/stm32g431_sample_fw/src/hw/driver/usb/usb_cdc/: usbd_cdc.c  usbd_cdc.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
